<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/mod_item_name"
        android:hint="@string/new_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/mod_item_price"
        android:hint="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/mod_item_name"
        android:layout_alignRight="@+id/mod_item_name"
        android:layout_alignEnd="@+id/mod_item_name" />

    <Spinner
        android:id="@+id/mod_spin_item_currency"
        android:text="@string/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:entries="@array/currencies_array"
        android:layout_below="@+id/mod_item_name"
        android:layout_toRightOf="@+id/mod_item_price"
        android:layout_toEndOf="@+id/mod_item_price"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp">
    </Spinner>

    <EditText
        android:id="@+id/mod_item_alert"
        android:hint="@string/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/mod_item_price"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/mod_item_photo"
        android:text="@string/upl_pho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mod_item_alert"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="35dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/mod_item_save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mod_item_price"
        android:layout_alignLeft="@+id/mod_spin_item_currency"
        android:layout_alignStart="@+id/mod_spin_item_currency"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp" />

    <Button
        android:id="@+id/mod_item_cancell"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mod_item_alert"
        android:layout_alignLeft="@+id/mod_item_save"
        android:layout_alignStart="@+id/mod_item_save"
        android:layout_marginTop="22dp" />

</RelativeLayout>