<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/new_item_name"
        android:hint="@string/new_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <EditText
        android:id="@+id/new_item_price"
        android:hint="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/new_item_name"
        android:layout_alignRight="@+id/new_item_name"
        android:layout_alignEnd="@+id/new_item_name" />

    <Spinner
        android:id="@+id/spin_item_currency"
        android:text="@string/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:entries="@array/currencies_array"
        android:layout_below="@+id/new_item_name"
        android:layout_toRightOf="@+id/new_item_price"
        android:layout_toEndOf="@+id/new_item_price"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp">
    </Spinner>

    <EditText
        android:id="@+id/new_item_alert"
        android:hint="@string/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/new_item_price"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:id="@+id/new_item_photo"
        android:text="@string/upl_pho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/new_item_alert"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="35dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/new_item_add_another"
        android:text="@string/add_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/new_item_save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp"
        android:layout_below="@+id/new_item_alert"
        android:layout_alignRight="@+id/spin_item_currency"
        android:layout_alignEnd="@+id/spin_item_currency"
        android:layout_marginTop="31dp" />

    <Button
        android:id="@+id/new_item_cancell"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="47dp"
        android:layout_marginEnd="47dp"
        android:layout_alignBaseline="@+id/new_item_save"
        android:layout_alignBottom="@+id/new_item_save"
        android:layout_toLeftOf="@+id/new_item_save"
        android:layout_toStartOf="@+id/new_item_save" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:orientation="horizontal"
        android:weightSum="1">

    </LinearLayout>

    <TextView
        android:id="@+id/Image"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_item_cancell"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="56dp"
        android:layout_toEndOf="@+id/new_item_photo"
        android:layout_toRightOf="@+id/new_item_photo"
        android:text="Insert a product image from galery or picture " />

    <ImageButton
        android:id="@+id/selectImage"
        android:layout_width="73dp"
        android:layout_height="43dp"
        android:layout_alignBottom="@+id/Image"
        android:layout_alignEnd="@+id/new_item_alert"
        android:layout_alignRight="@+id/new_item_alert"
        android:background="@drawable/ic_menu_gallery"
        android:layout_alignTop="@+id/Image" />

    <ImageButton
        android:id="@+id/selectImageCamera"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/spin_item_currency"
        android:layout_alignStart="@+id/spin_item_currency"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="0.48"
        android:background="@drawable/ic_menu_camera"
        android:layout_alignTop="@+id/Image"
        android:layout_alignRight="@+id/spin_item_currency"
        android:layout_alignEnd="@+id/spin_item_currency" />

</RelativeLayout>